--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "prettier": "prettier --write .",
     "q1": "bun run questions/00001-write-to-stdout.ts",
-    "s1": "bun run solutions/00001-write-to-stdout.ts"
+    "s1": "bun run solutions/00001-write-to-stdout.ts",
+    "c1": "bun run comparison/00001-write-to-stdout.ts",
+    "q2": "bun run questions/00002-read-a-json-file.ts",
+    "s2": "bun run solutions/00002-read-a-json-file.ts"
   },
   "devDependencies": {
     "bun-types": "latest",
