--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "composite": true,
     "strict": true,
+    "exactOptionalPropertyTypes": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
