--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "q2": "bun run questions/00002-check-if-file-exists.ts",
     "s2": "bun run solutions/00002-check-if-file-exists.ts",
     "c2": "bun run comparison/00002-check-if-file-exists.ts",
+    "q3": "bun run questions/00003-append-to-file.ts",
+    "s3": "bun run solutions/00003-append-to-file.ts",
+    "c3": "bun run comparison/00003-append-to-file.ts",
     "schema-q1": "SOMETHING_COOL=42 bun run questions/schema-00001-read-environment-variable.ts",
     "schema-s1": "SOMETHING_COOL=42 bun run solutions/schema-00001-read-environment-variable.ts",
     "schema-c1": "SOMETHING_COOL=42 bun run comparison/schema-00001-read-environment-variable.ts",
